@@ -447,6 +447,7 @@ Tamito Kajiyama
 Peter van Kampen
 Rafe Kaplan
 Jacob Kaplan-Moss
+Arkady Koplyarov
 Lou Kates
 Hiroaki Kawai
 Sebastien Keim
