@@ -40,6 +40,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #11577: fix ResourceWarning triggered by improved binhex test coverage
+
 - Issue #11401: fix handling of headers with no value; this fixes a regression
   relative to Python2 and the result is now the same as it was in Python2.
 
@@ -128,6 +130,8 @@ Tools/Demos
 
 Tests
 -----
+
+- Issue #11577: improve test coverage of binhex.py. Patch by Arkady Koplyarov.
 
 - Issue #11578: added test for the timeit module.  Patch Michael Henry.
 
